--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
+  "scripts": {
+    "test": "jest"
+  },
   "name": "proxy-pattern",
   "version": "1.0.0",
   "main": "index.js",
   "author": "igornfaustino",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "jest": "^27.4.5",
+    "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   }
 }
