--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
-  "scripts": {
-    "test": "jest"
-  },
-  "name": "proxy-pattern",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "igornfaustino",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/jest": "^27.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
-    "eslint": "^8.5.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.3",
-    "jest": "^27.4.5",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.5.4"
-  }
+	"scripts": {
+		"test": "jest",
+		"prepare": "husky install"
+	},
+	"name": "proxy-pattern",
+	"version": "1.0.0",
+	"main": "index.js",
+	"author": "igornfaustino",
+	"license": "MIT",
+	"devDependencies": {
+		"@types/jest": "^27.0.3",
+		"@typescript-eslint/eslint-plugin": "^5.8.0",
+		"@typescript-eslint/parser": "^5.8.0",
+		"eslint": "^8.5.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-plugin-import": "^2.25.3",
+		"husky": "^7.0.4",
+		"jest": "^27.4.5",
+		"lint-staged": "^12.1.3",
+		"ts-jest": "^27.1.2",
+		"typescript": "^4.5.4"
+	},
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx}": [
+			"eslint --fix",
+			"jest"
+		]
+	}
 }
