--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,11 @@
 		"node": true,
 		"jest": true
 	},
-	"extends": ["airbnb-base"],
+	"extends": [
+		"airbnb-base",
+		"plugin:@typescript-eslint/eslint-recommended",
+		"plugin:@typescript-eslint/recommended"
+	],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": 13
@@ -14,6 +18,7 @@
 	"rules": {
 		"indent": ["error", "tab"],
 		"no-tabs": "off",
-		"import/prefer-default-export": "off"
+		"import/prefer-default-export": "off",
+		"no-useless-constructor": "off"
 	}
 }
